mymagazine-service.yml
apiVersion: v1
kind: Service
metadata:
  name: magazine1
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: magazine1
  type: NodePort
